# Oksishuter

./: .gitignore  README.md  export_presets.cfg  index.html  project.godot  style.css
.github/workflows/: build-apk.yml  ci.yml  pages.yml
backend/: README.md  pyproject.toml
backend/app/: main.py
js/: ai.js  character.js  main.js  storage.js  ui.js
scenes/: game_world.tscn  hud.tscn
scripts/: enemy.gd  game_data.gd  game_manager.gd  hud.gd  main_menu.gd  player.gd
talking/: README.md  index.html  manifest.json
talking/backend/: README.md  pyproject.toml
talking/backend/tests/: test_main.py
talking/js/: echo.js  game.js  main.js  speech.js  storage.js  tts.js
